--- a/src/styles/components/product-list.scss
+++ b/src/styles/components/product-list.scss
@@ -5,6 +5,7 @@
         display: flex;
         justify-content: flex-end;
         padding: 1rem;
+        height: 6em;
     }
 
     &__grid {
